[package]
name = "geyser-service-client"
version = "0.2.0"
edition = "2021"
authors = [
    "XOR·APPS <developers@xorapps.network>",
    "M81 Network Developers <support@m81.network>",
]
repository = "https://github.com/m81network/GrizzlyHackathon"
homepage = "https://m81.network/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-rpc-client = "1.15.2"
solana-sdk = "1.15.2"
bs58 = "0.4.0"
ed25519-dalek = "1.0.1"
geyser-service-common = { path = "../GeyserServiceCommon/" }
serde_json = "1.0.94"
serde = { version = "1.0.156", features = ["derive"] }
toml = "0.7.3"
webbrowser = "0.8.7"
