[package]
name = "geyser-service-common"
version = "0.2.0"
description = "Common data structures for M81 FusionDrive Service"
authors = [
    "XOR·APPS <developers@xorapps.network>",
    "M81 Developers <support@m81.network>",
]
repository = "https://github.com/m81network/GrizzlyHackathon"
license = "MPL-2.0"
homepage = "https://m81.network/"
edition = "2018"

[dependencies]
borsh = "0.9.3"
solana-program = "1.15.2"
