[package]
name = "validator-cdn-service"
version = "0.1.0"
authors = [
    "XOR·APPS <developers@xorapps.network>",
    "M81 Developers <support@m81.network>",
]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "CDN Validator Service"
repository = "https://github.com/m81network/GrizzlyHackathon"
homepage = "https://m81.network/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-std = { version = "1.12.0", features = ["attributes"] }
blake3 = "1.3.3"
borsh = "0.9.3"
femme = "2.2.1"
lazy_static = "1.4.0"
tide = "0.16.0"
validator-document-service = { git = "https://github.com/m81network/GrizzlyHackathon", version = "0.2.0" }
